# mediafeed

./: Dockerfile  LICENSE  README  README.rst  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  start_app.sh  sync_channels.sh
config/nginx/: yt_organizer.conf
mediafeed/: manage.py
mediafeed/channels/: admin.py  models.py  urls.py  utils.py  views.py
mediafeed/channels/migrations/: 0001_initial.py
mediafeed/channels/templates/: category_details.html  user_details.html
mediafeed/channels/tests/: test_utils.py  test_views.py
mediafeed/core/: urls.py  views.py
mediafeed/core/static/css/: styles.css
mediafeed/core/templates/: base.html
mediafeed/core/templates/registration/: login.html
mediafeed/mediafeed/: asgi.py  settings.py  urls.py  wsgi.py
yt_organizer/: manage.py
yt_organizer/channels/: admin.py  apps.py  managers.py  models.py  urls.py  utils.py  views.py
yt_organizer/channels/management/commands/: sync_channels.py
yt_organizer/channels/migrations/: 0001_initial.py  0002_auto_20200624_1855.py  0002_category_slug.py  0003_auto_20200624_1903.py  0004_auto_20200626_1702.py  0005_auto_20200706_2331.py
yt_organizer/channels/templates/: base.html  category_details.html
yt_organizer/channels/tests/: test_managers.py  test_models.py  test_utils.py  test_views.py
yt_organizer/core/static/css/: styles.css
yt_organizer/core/templates/: base.html
yt_organizer/yt_organizer/: asgi.py  settings.py  urls.py  wsgi.py
