[tool.poetry]
name = "yt-organizer"
version = "0.1.0"
description = ""
authors = ["Renne Rocha <renne@rennerocha.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.5.1"
django = "^3.0.7"
requests = "^2.23.0"
xmltodict = "^0.12.0"
dateparser = "^0.7.6"
django-bootstrap4 = "^2.0.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"
ipython = "^7.15.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
