[tool.poetry]
name = "yt-organizer"
version = "0.1.0"
description = ""
authors = ["Renne Rocha <renne@rennerocha.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"
requests = "^2.23.0"
xmltodict = "^0.12.0"
dateparser = "^0.7.6"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"
ipython = "^7.15.0"
black = "^19.10b0"
model_bakery = "^1.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
